--- a/TheShop/TheShop/TheShop.csproj
+++ b/TheShop/TheShop/TheShop.csproj
@@ -44,7 +44,7 @@
   <ItemGroup>
     <Compile Include="DAL\Interfaces\IArticleRepository.cs" />
     <Compile Include="DAL\Models\Article.cs" />
-    <Compile Include="DAL\Repositories\DatabaseDriver.cs" />
+    <Compile Include="DAL\Repositories\ArticleRepository.cs" />
     <Compile Include="Utilities\Logger.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
