--- a/TheShop/TheShop/TheShop.csproj
+++ b/TheShop/TheShop/TheShop.csproj
@@ -56,6 +56,7 @@
     <Compile Include="DAL\Interfaces\IArticleRepository.cs" />
     <Compile Include="DAL\Models\Article.cs" />
     <Compile Include="DAL\Repositories\ArticleRepository.cs" />
+    <Compile Include="DAL\Repositories\BaseRepository.cs" />
     <Compile Include="Utilities\Logger.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
