--- a/TheShop/TheShop/TheShop.csproj
+++ b/TheShop/TheShop/TheShop.csproj
@@ -58,6 +58,7 @@
     <Compile Include="DAL\Repositories\ArticleRepository.cs" />
     <Compile Include="DAL\Repositories\BaseRepository.cs" />
     <Compile Include="Services\Interfaces\IShopService.cs" />
+    <Compile Include="Services\Interfaces\ISupplier.cs" />
     <Compile Include="Utilities\Logger.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
