--- a/TheShop/TheShop/TheShop.csproj
+++ b/TheShop/TheShop/TheShop.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\ShopController.cs" />
+    <Compile Include="Controllers\SupplierController.cs" />
     <Compile Include="DAL\ApplicationDbContext.cs" />
     <Compile Include="DAL\Interfaces\IArticleRepository.cs" />
     <Compile Include="DAL\Models\Article.cs" />
