--- a/TheShop/TheShopTests/TheShopTests.csproj
+++ b/TheShop/TheShopTests/TheShopTests.csproj
@@ -73,6 +73,7 @@
     <Compile Include="DAL\Repositories\ArticleRepositoryTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ShopServiceTests.cs" />
+    <Compile Include="Services\SupplierServiceTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
