--- a/TheShop/TheShopTests/TheShopTests.csproj
+++ b/TheShop/TheShopTests/TheShopTests.csproj
@@ -70,6 +70,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\ShopControllerTests.cs" />
     <Compile Include="DAL\Repositories\ArticleRepositoryTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ShopServiceTests.cs" />
