Added IMapper, ArticleMapper and ArticleDTO. Changed ShopController output type of a method OrderAndSellArticle to ArticleDTO. Changed ShopService output type of the methods OrderArticle and SellArticle  to Article

--- a/TheShop/TheShop/TheShop.csproj
+++ b/TheShop/TheShop/TheShop.csproj
@@ -53,6 +53,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\ShopController.cs" />
+    <Compile Include="DTOs\ArticleDTO.cs" />
+    <Compile Include="Mappers\ArticleMapper.cs" />
+    <Compile Include="Mappers\IMapper.cs" />
     <Compile Include="Services\Interfaces\ISupplierService.cs" />
     <Compile Include="Services\SupplierService.cs" />
     <Compile Include="DAL\ApplicationDbContext.cs" />
