Added ArticleMapperTests, updated value test data value in ShopServiceTests.

--- a/TheShop/TheShopTests/TheShopTests.csproj
+++ b/TheShop/TheShopTests/TheShopTests.csproj
@@ -72,6 +72,7 @@
   <ItemGroup>
     <Compile Include="Controllers\ShopControllerTests.cs" />
     <Compile Include="DAL\Repositories\ArticleRepositoryTests.cs" />
+    <Compile Include="MapperTests\ArticleMapperTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ShopServiceTests.cs" />
     <Compile Include="Services\SupplierServiceTests.cs" />
