--- a/TheShop/TheShop/TheShop.csproj
+++ b/TheShop/TheShop/TheShop.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Services\Suppliers\Supplier1.cs" />
     <Compile Include="Services\Suppliers\Supplier2.cs" />
     <Compile Include="Services\Suppliers\Supplier3.cs" />
+    <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
