--- a/TheShop/TheShopTests/TheShopTests.csproj
+++ b/TheShop/TheShopTests/TheShopTests.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ShopServiceTests.cs" />
     <Compile Include="Services\SupplierServiceTests.cs" />
+    <Compile Include="StartupTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
