--- a/TheShop/TheShop/TheShop.csproj
+++ b/TheShop/TheShop/TheShop.csproj
@@ -58,6 +58,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\ShopController.cs" />
+    <Compile Include="DAL\Interfaces\IRepository.cs" />
+    <Compile Include="DAL\Interfaces\IUnitOfWork.cs" />
+    <Compile Include="DAL\UnitOfWork.cs" />
     <Compile Include="DTOs\ArticleDTO.cs" />
     <Compile Include="Mappers\ArticleMapper.cs" />
     <Compile Include="Mappers\IMapper.cs" />
